--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,7 @@
 @import url("./teaser.css");
 @import url("./Second_Teaser.css");
 @import url("./Image_tiles.css");
+@import url("./Footer.css");
 
 * {
   margin: 0px;
