--- a/Second_Teaser.css
+++ b/Second_Teaser.css
@@ -52,6 +52,10 @@
   background: none;
   cursor: pointer;
 }
+.Second_teaser .Second_teaser_content button:hover {
+  background: white;
+  transition: all ease-out 0.3s;
+}
 .Second_teaser .Second_teaser_content button p {
   font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold)
     var(--unnamed-font-size-14) / var(--unnamed-line-spacing-17)
