--- a/product_teaser.css
+++ b/product_teaser.css
@@ -37,6 +37,10 @@
 .Products .product_box_1,
 .Products .product_box_2 {
   display: flex;
+  width: 50%;
+}
+.product_1,.product_2 {
+  width: 50%;
 }
 
 .card {
@@ -180,7 +184,7 @@ background-color: #fff;
 .Second_product_teaser {
   margin-top: 93px;
 }
-@media only screen and (min-device-width: 320px) and (max-device-width: 920px) {
+@media only screen and (min-device-width: 200px) and (max-device-width: 768px) {
   .popular_all_products,
   .image_bg .new_box,
   .image_bg .discount_box {
@@ -190,6 +194,14 @@ background-color: #fff;
     display: block;
     margin-top: 0px;
   }
+  .Products .product_box_1, .Products .product_box_2 {
+    display: flex;
+    width: 100%;
+    margin-top: 20px;
+}
+.product_1, .product_2 {
+  width: 100%;
+}
   .card {
     max-width: 300px;
     height: 462px;
@@ -199,16 +211,22 @@ background-color: #fff;
   }
   .image_bg {
     background-color: #fff;
-    width: 172px;
+    width: 100%;
     height: 346px;
   }
   .card button {
     width: 159px;
   }
-  .image_background {
-    width: 172px;
-    margin-top: 0px;
+  .card button i {
+    display: none;
   }
+  /* .card button:hover {
+    display: block;
+  } */
+  .image_background {
+    width: 100%;
+    margin-top: 0px;
+}
   .image_bg img,
   .image_background img {
     width: 100%;
