--- a/teaser.css
+++ b/teaser.css
@@ -54,6 +54,12 @@
   background: none;
   cursor: pointer;
 }
+.teaser .teaser_content button:hover,.teaser .teaser_content button p:hover {
+  border: 1px solid var(--white-ffffff);
+  border: 1px solid #ffffff;
+  background: white;
+  color: black;
+}
 .teaser .teaser_content button p {
   font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold)
     var(--unnamed-font-size-14) / var(--unnamed-line-spacing-17)
