--- a/Second_Teaser.css
+++ b/Second_Teaser.css
@@ -72,7 +72,7 @@
   width: 50%;
 }
 .Second_teaser_img img {
-  width: 120%;
+  width: 150%;
   height: 700px;
   background-repeat: no-repeat;
   background-size: contain;
@@ -86,9 +86,15 @@
         height: 563px;
     }
     .Second_teaser .Second_teaser_content {
-        width: 102%;
+        width: 100%;
         height: 562px;
         margin-top: -5px;
+    }
+    .Second_teaser_img img {
+      width: 118%;
+      height: 700px;
+      background-repeat: no-repeat;
+      background-size: contain;
     }
     .Second_teaser .Second_teaser_content .Second_teaser_content_box {
         padding: 128px 21px 0px 20px;
