--- a/teaser.css
+++ b/teaser.css
@@ -10,13 +10,13 @@
   background: var(--como-547665) 0% 0% no-repeat padding-box;
   background: #547665 0% 0% no-repeat padding-box;
   opacity: 1;
-  position: relative;
 }
 .teaser .teaser_content .teaser_content_box {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+    padding: 200px 80px;
 }
 
 .teaser .teaser_content .heading {
@@ -77,6 +77,17 @@
     height: 731px;
     background-repeat: no-repeat;
     background-size: contain;
+}
+@media only screen and (min-device-width: 921px) and (max-device-width: 1024px) {
+  .teaser .teaser_content {
+    width: 51.5%;
+}
+.teaser_img img {
+  width: 101.5%;
+  height: 731px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 920px) {
     .teaser {
