--- a/Hero_banner.css
+++ b/Hero_banner.css
@@ -115,7 +115,7 @@
   width: 100%;
   z-index: -1;
   height: 100%;
-  background: url(../assets/plant1.png) no-repeat;
+  background: url(./plant1.png) no-repeat;
   background-size: contain;
 }
 .bottle_image::after {
@@ -130,7 +130,7 @@
   width: 100%;
   z-index: 1;
   height: 100%;
-  background: url(../assets/plant2.png) no-repeat;
+  background: url(./plant2.png) no-repeat;
   background-size: 50%;
   z-index: -1;
 }
