--- a/feature_banner.css
+++ b/feature_banner.css
@@ -1,4 +1,4 @@
-@import url("../style/main.css");
+@import url("./main.css");
 
 .feature_banner {
   background: var(--athens-gray-eef2f4) 0% 0% no-repeat padding-box;
