--- a/product_teaser.css
+++ b/product_teaser.css
@@ -1,4 +1,4 @@
-@import url(./main.css);
+@import url(../style/main.css);
 
 .product_teaser_section {
   background-color: #eef3f4;
@@ -170,16 +170,32 @@ background-color: #fff;
   width: 90%;
 }
 .bg_image_box_1 {
-  background: #fff url("./acne_cream.png") 50% 140% no-repeat padding-box;
+  background: #fff url("../assets/acne_cream.png") 50% 140% no-repeat padding-box;
+}
+.bg_image_box_1:hover {
+  background: url(../assets/product_image_hover_1.png) 0% 0% no-repeat padding-box;
+  background-size: 300px 462px;
 }
 .bg_image_box_2 {
-  background: #fff url("./vitiligio.png") 50% 90% no-repeat padding-box;
+  background: #fff url("../assets/vitiligio.png") 50% 90% no-repeat padding-box;
+}
+.bg_image_box_2:hover {
+  background: url(../assets/product_image_hover_2.png) 0% 0% no-repeat padding-box;
+  background-size: 300px 462px;
 }
 .bg_image_box_3 {
-  background: #e3e5e4 url("./soothbottle.png") 50% 80% no-repeat padding-box;
+  background: #e3e5e4 url("../assets/soothbottle.png") 50% 80% no-repeat padding-box;
+}
+.bg_image_box_3:hover {
+  background: url(../assets/product_image_hover_3.png) 0% 0% no-repeat padding-box;
+  background-size: 300px 462px;
 }
 .bg_image_box_4 {
-  background: #fff url("./sunburn.png") 50% 65% no-repeat padding-box;
+  background: #fff url("../assets/sunburn.png") 50% 65% no-repeat padding-box;
+}
+.bg_image_box_4:hover {
+  background: url(../assets/product_image_hover_4.png) 0% 0% no-repeat padding-box;
+  background-size: 300px 462px;
 }
 .image_background {
   background-color: #e3e5e4;
@@ -204,11 +220,7 @@ background-color: #fff;
 .products .background_hover_image img{
   object-fit: cover;
 }
-#bg_1:hover {
-background: url(./smiling_boy.png) 0% 0% no-repeat padding-box;
 
-background-size: 300px 462px;
-}
 
 @media only screen and (min-device-width: 100px) and (max-device-width: 320px) { 
   .popular_all_products,
@@ -264,19 +276,19 @@ background-size: 300px 462px;
   }
 
   .bg_image_box_1 {
-    background: #fff url("./acne_cream.png") 50% 80% no-repeat padding-box;
+    background: #fff url("../assets/acne_cream.png") 50% 80% no-repeat padding-box;
     background-size: 130px 180px;
   }
   .bg_image_box_2 {
-    background: #fff url("./vitiligio.png") 50% 60% no-repeat padding-box;
+    background: #fff url("../assets/vitiligio.png") 50% 60% no-repeat padding-box;
     background-size: 160px 195px;
   }
   .bg_image_box_3 {
-    background: #e3e5e4 url("./soothbottle.png") 50% 60% no-repeat padding-box;
+    background: #e3e5e4 url("../assets/soothbottle.png") 50% 60% no-repeat padding-box;
     background-size: 160px 195px;
   }
   .bg_image_box_4 {
-    background: #fff url("./sunburn.png") 50% 60% no-repeat padding-box;
+    background: #fff url("../assets/sunburn.png") 50% 60% no-repeat padding-box;
     background-size: 160px 195px;
   }
 }
@@ -332,19 +344,19 @@ background-size: 300px 462px;
     margin-top: 29px;
   }
   .bg_image_box_1 {
-    background: #fff url("./acne_cream.png") 50% 80% no-repeat padding-box;
+    background: #fff url("../assets/acne_cream.png") 50% 80% no-repeat padding-box;
     background-size: 130px 180px;
   }
   .bg_image_box_2 {
-    background: #fff url("./vitiligio.png") 50% 60% no-repeat padding-box;
+    background: #fff url("../assets/vitiligio.png") 50% 60% no-repeat padding-box;
     background-size: 160px 195px;
   }
   .bg_image_box_3 {
-    background: #e3e5e4 url("./soothbottle.png") 50% 60% no-repeat padding-box;
+    background: #e3e5e4 url("../assets/soothbottle.png") 50% 60% no-repeat padding-box;
     background-size: 160px 195px;
   }
   .bg_image_box_4 {
-    background: #fff url("./sunburn.png") 50% 60% no-repeat padding-box;
+    background: #fff url("../assets/sunburn.png") 50% 60% no-repeat padding-box;
     background-size: 160px 195px;
   }
 }
